# python_qa_hw16

qa_project/: README.md  pyproject.toml
