[project]
name = "qa-project"
version = "0.1.0"
description = ""
authors = [
    {name = "abardashevich",email = "abardashevich@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pytest>=8.3.5,<9.0.0",
    "selene>=1.0.2,<2.0.0"
]

[tool.poetry]
packages = [{include = "qa_project", from = "src"}]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
